[gd_scene load_steps=4 format=3 uid="uid://yips2rfx6pah"]

[ext_resource type="Script" path="res://Entities/InvaderSpawners/invader_spawners.gd" id="1_53626"]
[ext_resource type="AudioStream" uid="uid://b7y0ogwi0hvf6" path="res://Assets/Audio/invader_shoot.mp3" id="2_c03j6"]
[ext_resource type="AudioStream" uid="uid://wj7y0fskvsnc" path="res://Assets/Audio/little_robot_sound_factory_Explosion_02.mp3" id="3_x7p44"]

[node name="InvaderSpawners" type="Node2D"]
script = ExtResource("1_53626")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShootAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_c03j6")

[node name="DeadAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_x7p44")

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
